--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.41MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.75MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35113, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35093, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: 140.179.111.225, port: 48611, type: ss, cipher: aes-256-gcm, password: JkwHP4H3Vh}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.50MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 82a235da-41e1-4ee4-811a-f72859be81a1, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.20MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.84MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.84MB/s(Youtube:不良林)
 rules:
