--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: 140.179.111.225, port: 48611, type: ss, cipher: aes-256-gcm, password: JkwHP4H3Vh}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.50MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 31097, type: trojan, password: 82a235da-41e1-4ee4-811a-f72859be81a1, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.20MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35132, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.48MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.01MB/s(Youtube:不良林), server: 103.253.43.228, port: 443, type: trojan, password: 48a55ebb-54f2-4757-8899-047933695eb2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
