--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-560.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-652.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 140.179.111.225, port: 48611, type: ss, cipher: aes-256-gcm, password: JkwHP4H3Vh}
-  - {name: 🇨🇳 中国-4.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-174.0KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.21MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35129, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-317.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-401.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-323.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-468.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-6.70MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-794.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-531.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-652.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-174.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-317.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
